# systems-workshop

./: .gitmodules  README.md
projects/assembly-io/: .gitignore  README.md
projects/assembly-io/src/: main.asm
projects/btrfs-restic/: .gitignore  README.md
projects/btrfs-restic/lib/: create_repo_dirs.sh  run_backup.sh  server_init.sh  utils.sh
projects/btrfs-restic/share/examples/: example.env
projects/convertpytoml/: .gitignore  LICENSE  README.md
projects/convertpytoml/convertpytoml/: pip_to_poetry.py  poetry_to_pip.py  toml_utils.py
projects/convertpytoml/data/: orig_for_pip.toml  orig_for_poetry.toml
projects/pygetfacl/: .gitignore  LICENSE.md  README.md  pyproject.toml  setup.cfg
projects/pygetfacl/demo_docker/: Dockerfile  entrypoint.sh
projects/pygetfacl/demo_local/: demo_local.py
projects/pygetfacl/docker_dev/: .env  docker-compose.yml
projects/pygetfacl/src/pygetfacl/: __init__.py  acl_info_retriever.py  aclpath_exceptions.py  data_containers.py  file_setting.py  output_spec.py  subprocess_caller.py
projects/pygetfacl/src/test_pygetfacl/: test_acl_data_containers.py  test_acl_info_retriever.py  test_file_settings.py  test_subprocess_caller.py
projects/smallsh/: .clang-format  .gitignore  Makefile  README.md
projects/smallsh/include/: built_ins.h  command.h  definitions.h  globals.h  process_mgmt.h  signal_handling.h  utilities.h
projects/smallsh/src/: built_ins.c  command.c  main.c  process_mgmt.c  signal_handling.c  utilities.c
projects/smallsh/test/results/: final-os1-test  (+1 more)
projects/smallsh/tools/: smallsh.code-workspace
