[metadata]
name = pygetfacl
version = 0.0.1
author = Duane Goodner
author_email = dmgoodner@gmail.com
description = Provides method to capture Linux getfacl info as Python object
url = https://github.com/duanegoodner/pygetfacl
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta,
    License :: OSI Approved :: MIT License,
    Intended Audience :: Developers,
    Programming Language :: Python :: 3,
    Operating System :: POSIX :: Linux,
    Operating System :: POSIX :: Unix

[options]
zip_safe = False
package_dir=
    =src
packages = find:
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = src

